--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,9 +3,10 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      nodejs: 12
+      nodejs: 14
+  pre_build:
     commands:
-      - npm ci
+      - npm install
   build:
     commands:
       - npm run lint
