--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,4 @@ phases:
       nodejs: 12
   pre_build:
     commands:
-      - npm install
-  build:
-    commands:
-      - npm run build
+      - npm ci
