--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,6 +6,7 @@ phases:
       nodejs: 12
   pre_build:
     commands:
+      - rm package-lock.json
       - npm ci
       - npm install
       - npm install -g cdk
