--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@aws-cdk/aws-codebuild": "^1.96.0",
     "@aws-cdk/assert": "1.96.0",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
@@ -22,6 +23,7 @@
   },
   "dependencies": {
     "@aws-cdk/aws-codebuild": "^1.96.0",
+    "@aws-cdk/assert": "1.96.0",
     "@aws-cdk/core": "1.96.0",
     "source-map-support": "^0.5.16"
   }
